[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoblog"
version = "0.1.0"
description = "An auto-blogging tool: aggregate sources, generate posts with Claude, publish to Markdown or a platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "autoblog" }]
dependencies = [
    "anthropic>=0.40",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
autoblog = "autoblog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoblog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
